anvil-tera-derive/tests/compile_fail/missing_path.stderr
error: Missing 'path' attribute within #[template(...)]. Example: #[template(path = "my_template.html", ...)]
  --> $DIR/missing_path.rs:11:1
   |
11 | #[derive(Serialize, Template)]
   | ^
